# GOKU

./: .gitignore  README.md  batch_run.sh  config.py  di_baseline_cvs.py  di_baseline_double_pendulum.ipynb  di_baseline_double_pendulum.py  di_baseline_pendulum.ipynb  di_baseline_pendulum.py  double_pendulum_evaluation.py  env.sh  evaluate_all.py  evaluate_cvs.py  goku-illinois.pem  goku_pred_cvs.npy  goku_train.py  latent_ode_train.py  latent_pred_cvs.npy  latentode.loss-train.txt  load_goku_result.py  lstm.loss-train.txt  lstm_train.py  main.py  my_goku_load.py  pendulum.loss-train.txt  plot_extrap_error.py  pyproject.toml  read_di1.py  read_goku.ipynb  read_latent_ode.ipynb  read_lstm.ipynb  read_python.py  requirements.txt  results_summary.csv  t.py  x_extrap_target_cvs.npy
checkpoints/cvs/: goku_model.pkl  latent_ode_model.pkl  lstm_model.pkl
checkpoints/double_pendulum/: goku_model.pkl  latent_ode_model.pkl  lstm_model.pkl
checkpoints/pendulum/: goku_model.pkl  latent_ode_model.pkl  lstm_model.pkl
checkpoints/pendulum_friction/: goku_model.pkl  latent_ode_model.pkl  lstm_model.pkl
evaluate/: adam_output.txt  adamw_output.txt  plot_eval.py  utils.py
evaluate/adam/: evaluate_cvs.py  evaluate_double_pendulum.py  evaluate_pendulum.py  goku_pred_cvs.npy  latent_pred_cvs.npy  lstm_pred_cvs.npy  script.sh
evaluate/adamw/: evaluate_cvs.py  evaluate_double_pendulum.py  evaluate_pendulum.py  goku_pred_cvs.npy  latent_pred_cvs.npy  lstm_pred_cvs.npy  (+1 more)
models/: GOKU.py
utils/: ODE_dataset.py  create_double_pendulum_data.py  create_pendulum_data.py  utils.py
(+15 files in other folders)
