[project]
name = "goku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.12,<3.14"
dependencies = [
    "gymnasium",
    "matplotlib",
    "numpy",
    "pip",
    "pygame",
    "scikit-image",
    "scipy",
    "torch",
    "torchdiffeq",
    "tqdm",
    "wheel",
]
