[project]
name = "goku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.12,<3.14"
dependencies = [
    "gymnasium",
    "icecream>=2.1.8",
    "matplotlib",
    "numpy",
    "pandas>=2.3.3",
    "pip",
    "pygame",
    "scikit-image",
    "scipy",
    "torch",
    "torchdiffeq",
    "tqdm",
    "wheel",
]
